--- a/user-todos.html
+++ b/user-todos.html
@@ -17,12 +17,27 @@
 
         </header>
         <main>
-            
+            <div class="container">
+                <div class="todo-container bg-light rounded-0">
+                    <form>
+                        <!--name field-->
+                        <div class="form-group p-2">
+                            <label for="username">Username*</label>
+                            <select class="form-select" id="username" onchange="getUserId(username)">
+                                <option value="" >Choose an option</option>
+                            </select>
+                            <div id="todoUserApiError">
+
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </main>
         <footer>
             
         </footer>
-        <script src="scripts/"></script>
+        <script src="scripts/user-todos.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
