--- a/new-todo.html
+++ b/new-todo.html
@@ -13,8 +13,33 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
     <body>
-        <header>
-
+        <header class="bg-primary"> 
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+                <div class="container-fluid gx-0">
+                    <a class="navbar-brand" href="index.html" >
+                        <img src="images/text-1716182278752.png" alt="3D fonts">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav header-nav">
+                            <a class="nav-link header-nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Todos
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="new-todo.html">Add Todos</a></li>
+                                    <li><a class="dropdown-item" href="user-todos.html">View Todos</a></li>
+                                </ul>
+                            </li>
+                
+                            <a class="nav-link header-nav-link" href="new-user.html"><i class="bi bi-person-circle"></i>Register</a>
+                        </div>
+                    </div> 
+                </div>
+            </nav>
         </header>
         <main>
             <!--new todo form snippet-->
@@ -84,7 +109,7 @@
         
                         <!--register button-->
                         <div class="row p-3 justify-content-center">
-                            <button class="btn bg-warning newtodo-btn rounded-0" type="button" id="addBtn" onclick="validateForm()">ADD TODO</button>
+                            <button class="btn bg-primary text-white newtodo-btn rounded-0" type="button" id="addBtn" onclick="validateForm()">ADD TODO</button>
                         </div>
                     </form>
                     <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
