--- a/header.html
+++ b/header.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
     <body>
-        <header class="bg-primary"> 
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
+        <header> 
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container-fluid gx-0">
                     <a class="navbar-brand" href="index.html" >
                         <img src="images/text-1716182278752.png" alt="3D fonts">
@@ -24,18 +24,18 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                         <div class="navbar-nav header-nav">
-                            <a class="nav-link header-nav-link active text-white" aria-current="page" href="index.html">Home</a>
-                            <li class="nav-item dropdown">
+                            <a class="nav-link header-nav-link active text-white" aria-current="page" href="index.html"><i class="bi bi-house-door-fill"></i>&nbsp;Home</a>
+                            <li class="nav-item header-nav-link dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Todos
+                                    <i class="bi bi-pencil-fill"></i>&nbsp;Todos
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="new-todo.html">Add Todos</a></li>
-                                    <li><a class="dropdown-item" href="user-todos.html">View Todos</a></li>
+                                <ul class="dropdown-menu todo-header-dropdown">
+                                    <li><a class="dropdown-item todo-header-dropdown-list" href="new-todo.html">Add Todos</a></li>
+                                    <li><a class="dropdown-item todo-header-dropdown-list" href="user-todos.html">View Todos</a></li>
                                 </ul>
                             </li>
                 
-                            <a class="nav-link header-nav-link" href="new-user.html"><i class="bi bi-person-circle"></i>Register</a>
+                            <a class="nav-link header-nav-link todo_link " href="new-user.html"><i class="bi bi-person-circle"></i>&nbsp;Register</a>
                         </div>
                     </div> 
                 </div>
