--- a/new-todo.html
+++ b/new-todo.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
     <body>
-        <header class="bg-primary"> 
+        <header> 
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container-fluid gx-0">
                     <a class="navbar-brand" href="index.html" >
@@ -24,27 +24,30 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                         <div class="navbar-nav header-nav">
-                            <a class="nav-link header-nav-link active text-white" aria-current="page" href="index.html">Home</a>
-                            <li class="nav-item dropdown">
+                            <a class="nav-link header-nav-link text-white" aria-current="page" href="index.html"><i class="bi bi-house-door-fill"></i>&nbsp;Home</a>
+                            <li class="nav-item header-nav-link dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Todos
+                                    <i class="bi bi-pencil-fill"></i>&nbsp;Todos
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="new-todo.html">Add Todos</a></li>
-                                    <li><a class="dropdown-item" href="user-todos.html">View Todos</a></li>
+                                <ul class="dropdown-menu todo-header-dropdown">
+                                    <li><a class="dropdown-item todo-header-dropdown-list active" href="new-todo.html">Add Todos</a></li>
+                                    <li><a class="dropdown-item todo-header-dropdown-list" href="user-todos.html">View Todos</a></li>
                                 </ul>
                             </li>
                 
-                            <a class="nav-link header-nav-link" href="new-user.html"><i class="bi bi-person-circle"></i>Register</a>
+                            <a class="nav-link header-nav-link todo_link " href="new-user.html"><i class="bi bi-person-circle"></i>&nbsp;Register</a>
                         </div>
                     </div> 
                 </div>
             </nav>
         </header>
-        <main>
+        <main class="newtodo_body">
             <!--new todo form snippet-->
+            <div class="newtodo_image_left">
+                <img src="images/new-2.jpeg" class="pencil-image">
+            </div>
             <div class="container">
-                <div class="newtodo-container bg-light rounded-0">
+                <div class="newtodo-container rounded-0">
                     <form>
                         <!--user name field-->
                         <div class="form-group p-2">
@@ -109,7 +112,7 @@
         
                         <!--register button-->
                         <div class="row p-3 justify-content-center">
-                            <button class="btn bg-primary text-white newtodo-btn rounded-0" type="button" id="addBtn" onclick="validateForm()">ADD TODO</button>
+                            <button class="btn text-white newtodo-btn rounded-0" type="button" id="addBtn" onclick="validateForm()">ADD TODO</button>
                         </div>
                     </form>
                     <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
