--- a/sample.html
+++ b/sample.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -47,3 +48,26 @@
     </body>
 </html>
 
+.pencil-image{
+  height: 50vw;
+  width:180%;
+  float: right;
+  opacity: 0.8;
+}
+.newtodo_image_left{
+  height:50vw;
+  width:40%;
+  margin: 50px 0px 0px 250px;
+}
+
+.pencil-image{
+  height: 41.3vw;
+  width:100%;
+  float: right;
+  opacity: 0.8;
+}
+.newtodo_image_left{
+  height:50vw;
+  width:40%;
+  margin: 110px 0px 0px 150px;
+}
